# 1commandbar

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: release-notes-style.md
docs/superpowers/plans/: 2026-04-23-1commandbar.md
docs/superpowers/specs/: 2026-04-23-1commandbar-design.md
public/: 1cmdbar.png.kra
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  config.rs  daemon.rs  error.rs  hotkey.rs  ipc.rs  main.rs  op_cli.rs  portal_hotkey.rs  vault.rs
src/components/: ActionMenu.test.tsx  ActionMenu.tsx  ItemDetailView.tsx  ItemRow.test.tsx  ItemRow.tsx  Onboarding.tsx  ResultsList.test.tsx  ResultsList.tsx  SearchBar.test.tsx  SearchBar.tsx  SettingsPanel.tsx  Toast.tsx
src/hooks/: useDebounce.test.ts  useTauri.ts
